src/app/profile/profile.component.css
#search {
  font-size: xx-large;
  border-radius: 20px;

}
#btn {
font-size: xx-large;
}

.results {

 color: black;
}
#title {
  text-align: center;
}

#repos {
  color: #ed5769;
  text-decoration: none;
}
#reset {
display: flex;
justify-content: center
}
#main {
border : 2px solid black;
font-family: 'Courgette',cursive;
}

